--- a/appsettings.json
+++ b/appsettings.json
@@ -11,6 +11,6 @@
   "LineBotSettings": {
     "channelSecret": "{your channel secret}",
     "channelAccessToken": "{your channel access token }",
-    "toUserId": "{your user id}"
+    "toUserId": "{ingtilindstrom}"
   }
 }
