--- a/appsettings.json
+++ b/appsettings.json
@@ -9,8 +9,8 @@
   "AllowedHosts": "*",
 
   "LineBotSettings": {
-    "channelSecret": "{your channel secret}",
-    "channelAccessToken": "{your channel access token }",
-    "toUserId": "{ingtilindstrom}"
+    "channelSecret": "{5513175064a37c13079ec84ff898fda1}",
+    "channelAccessToken": "{2f9de6de-2dcb-40da-b062-0657deab4a83}",
+    "toUserId": "{U2038575046ae57784f5b0bf59ba18791}"
   }
 }
