--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,7 @@
 
   "LineBotSettings": {
     "channelSecret": "{5513175064a37c13079ec84ff898fda1}",
-    "channelAccessToken": "{2f9de6de-2dcb-40da-b062-0657deab4a83}",
+    "channelAccessToken": "{  }",
     "toUserId": "{U2038575046ae57784f5b0bf59ba18791}"
   }
 }
