--- a/appsettings.json
+++ b/appsettings.json
@@ -11,6 +11,6 @@
   "LineBotSettings": {
     "channelSecret": "{5513175064a37c13079ec84ff898fda1}",
     "channelAccessToken": "{  }",
-    "toUserId": "{U2038575046ae57784f5b0bf59ba18791}"
+    "toUserId": "{ingtilindstrom}"
   }
 }
