--- a/appsettings.json
+++ b/appsettings.json
@@ -11,6 +11,6 @@
   "LineBotSettings": {
     "channelSecret": "{5513175064a37c13079ec84ff898fda1}",
     "channelAccessToken": "{  }",
-    "toUserId": "{ingtilindstrom}"
+    "toUserId": "{ingti}"
   }
 }
