change from ingti bot to final1
chanel secret 
and  touserid

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,8 +9,8 @@
   "AllowedHosts": "*",
 
   "LineBotSettings": {
-    "channelSecret": "{5513175064a37c13079ec84ff898fda1}",
+    "channelSecret": "{15095d9198d312e51753d849836db5b2}",
     "channelAccessToken": "{  }",
-    "toUserId": "{ingti}"
+    "toUserId": "{U2038575046ae57784f5b0bf59ba18791}"
   }
 }
