--- a/appsettings.json
+++ b/appsettings.json
@@ -13,4 +13,12 @@
     "channelAccessToken": "{  }",
     "toUserId": "{U2038575046ae57784f5b0bf59ba18791}"
   }
+  
+  
+  POST /knowledgebases/924816f3-4c89-4185-b10f-f5338c92cf44/generateAnswer
+Host: https://linebotf.azurewebsites.net/qnamaker
+Authorization: EndpointKey b450fdbd-7b70-4c14-9672-f12fa0cce2e1
+Content-Type: application/json
+{"question":"<Your question>"}
+
 }
